@@ -5,10 +5,9 @@ Description: A pretty pin-up girl posing in the header highlights this grunge ba
 Version: 2.1
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
-Tags: black, red, white, dark, two-columns, right-sidebar, fixed-width, theme-options, custom-colors, translation-ready, threaded-comments
+Tags: black, red, white, dark, two-columns, right-sidebar, fixed-layout, custom-colors, translation-ready, threaded-comments, custom-menu, custom-background
 WordPress Version Required: 3.0
 Tested Up To: 4.1
-Tags: brown, orange, silver, tan, light, two-columns, right-sidebar, fixed-width, threaded-comments, sticky-post, custom-menu, custom-background
 License: GNU General Public License v2
 License URI: http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 */
